tests/base/invalid/Cast_Invalid_1.whiley
define R1 as { real x }

int f(real i):
    return (int) i

void System::main([string] args):
    out.println(str(f(1.01)))
    
